--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <script type="module" src="/index.js"></script>
 </head>
 <body>
-
+  <div id="is-art">
+    This
+    contract
+    <span id="is-art-status">may be</span> art
+  </div>
 </body>
 </html>
