--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Is Art</title>
-  <script type="module" src="/index.js"></script>
+  <script type="module" src="./index.js"></script>
 </head>
 <body>
   <div id="is-art">
