--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     contract
     <span id="is-art-status">may be</span> art
   </div>
+  <form action="" method="get">
+    <input id="is-art-toggle" type="submit" value="Toggle">
+
+    <label for="is-art-keyfile">Add a key file</label>
+    <input id="is-art-keyfile" type="file" accept="application/json" required>
+  </form>
 </body>
 </html>
