--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Is Art</title>
+  <link rel="stylesheet" type="text/css" href="/index.css" />
   <script type="module" src="./index.js"></script>
 </head>
 <body>
