Handle form submit event correctly

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     contract
     <span id="is-art-status">may be</span> art
   </div>
-  <form action="" method="get">
+  <form id="is-art-form" action="" method="get">
     <input id="is-art-toggle" type="submit" value="Toggle">
 
     <label for="is-art-keyfile">Add a key file</label>
