--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
   <script type="module" src="./index.js"></script>
 </head>
 <body>
-  <div id="is-art">
-    This
-    contract
-    <span id="is-art-status">may be</span> art
-  </div>
-  <form id="is-art-form" action="" method="get">
-    <input id="is-art-toggle" type="submit" value="Toggle">
+  <div class="container">
+    <div id="is-art">
+      This
+      contract
+      <span id="is-art-status">may be</span> art
+    </div>
+    <form id="is-art-form" action="" method="get">
+      <div class="form-group">
+        <input id="is-art-toggle" type="submit" value="Submit">
+      </div>
 
-    <label for="is-art-keyfile">Add a key file</label>
-    <input id="is-art-keyfile" type="file" accept="application/json" required>
-  </form>
+      <div class="form-group">
+        <label for="is-art-keyfile">Add a key file</label>
+        <input id="is-art-keyfile" type="file" accept="application/json" required>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
