--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Is Art</title>
   <link rel="stylesheet" type="text/css" href="/index.css" />
   <script type="module" src="./index.js"></script>
