--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <span id="is-art-status">may be</span> art
     </div>
     <form id="is-art-form" action="" method="get">
-      <div class="form-group">
-        <input id="is-art-toggle" type="submit" value="Submit">
+      <div class="is-art-form-group">
+        <input class="is-art-btn" id="is-art-toggle" type="submit" value="Submit">
       </div>
 
-      <div class="form-group">
+      <div id="is-art-keyfile-group" class="is-art-form-group">
         <label for="is-art-keyfile">Add a key file</label>
         <input id="is-art-keyfile" type="file" accept="application/json" required>
       </div>
