Rename toggle button to submit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <form id="is-art-form" action="" method="get">
       <div class="is-art-form-group">
-        <input class="is-art-btn" id="is-art-toggle" type="submit" value="Submit">
+        <input class="is-art-btn" id="is-art-submit" type="submit" value="Submit">
       </div>
 
       <div id="is-art-keyfile-group" class="is-art-form-group">
