--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <div class="container">
     <div id="is-art">
-      This
-      contract
-      <span id="is-art-status">may be</span> art
+      <span>This</span>
+      <span>contract</span>
+      <span>
+        <span id="is-art-status">may be</span> art
+      </span>
     </div>
     <form id="is-art-form" action="" method="get">
       <div class="is-art-form-group">
