Style form labels and buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <form id="is-art-form" action="" method="get">
         <div id="is-art-keyfile-group" class="is-art-form-group">
           <label for="is-art-keyfile" class="is-art-label">Add a key file</label>
-          <input id="is-art-keyfile" type="file" accept="application/json" required>
+          <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
         </div>
         <div class="is-art-form-group">
           <label for="is-art-btn" class="is-art-label">Create a transaction</label>
