--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="row">
       <form id="is-art-form" action="" method="get">
         <div id="is-art-keyfile-group" class="is-art-form-group">
-          <label for="is-art-keyfile" class="is-art-label">Add a key file</label>
+          <label for="is-art-keyfile" class="is-art-label">Add an Arweave key file</label>
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
         </div>
         <div class="is-art-form-group">
-          <label for="is-art-btn" class="is-art-label">Create a transaction</label>
+          <label for="is-art-btn" class="is-art-label">Change the contract's state</label>
           <input class="is-art-btn" id="is-art-submit" type="submit" value="Submit">
         </div>
       </form>
