--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
         </div>
         <div class="is-art-form-group">
-          <label for="is-art-btn" class="is-art-label">Change the contract's state</label>
+          <label for="is-art-submit" class="is-art-label">Change the contract's state</label>
           <input class="is-art-btn" id="is-art-submit" type="submit" value="Submit">
         </div>
       </form>
