Show transaction in form instead of alert

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
           <label for="is-art-submit" class="is-art-label">Change the contract's state</label>
           <input class="is-art-btn" id="is-art-submit" type="submit" value="Submit">
         </div>
+        <div id="is-art-tx-group" class="is-art-form-group">
+          <label for="is-art-tx" class="is-art-label">Transaction</label>
+          <span id="is-art-tx">
+            None
+          </span>
+        </div>
       </form>
     </div>
   </div>
