Show errors in the form

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </div>
     <div class="row">
       <form id="is-art-form" action="" method="get">
+        <div id="is-art-error">
+        </div>
         <div id="is-art-keyfile-group" class="is-art-form-group">
           <label for="is-art-keyfile" class="is-art-label">Add an Arweave key file</label>
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
