--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div id="is-art-error">
         </div>
         <div id="is-art-keyfile-group" class="is-art-form-group">
-          <label for="is-art-keyfile" class="is-art-label">Add an Arweave key file</label>
+          <label for="is-art-keyfile" class="is-art-label">Your Arweave key file</label>
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
         </div>
         <div class="is-art-form-group">
-          <label for="is-art-submit" class="is-art-label">Change the contract's state</label>
-          <input class="is-art-btn" id="is-art-submit" type="submit" value="Submit">
+          <label for="is-art-submit" class="is-art-label">The contract's state</label>
+          <input class="is-art-btn" id="is-art-submit" type="submit" value="Change">
         </div>
         <div id="is-art-tx-group" class="is-art-form-group">
-          <label for="is-art-tx" class="is-art-label">Transaction</label>
+          <label for="is-art-tx" class="is-art-label">The Transaction</label>
           <span id="is-art-tx">
             None
           </span>
