--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="is-art-error">
         </div>
         <div id="is-art-keyfile-group" class="is-art-form-group">
-          <label for="is-art-keyfile" class="is-art-label">Your Arweave key file</label>
+          <label for="is-art-keyfile" class="is-art-label">An Arweave key file</label>
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
         </div>
         <div class="is-art-form-group">
