--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <div class="container">
     <div class="row">
       <div id="is-art">
-        <span>This</span>
-        <span>contract</span>
+        This contract
         <span id="is-art-status">may be</span>
-        <span>art.</span>
+        art.
       </div>
     </div>
     <div class="row">
