--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id="is-art-tx-group" class="is-art-form-group">
           <label for="is-art-tx" class="is-art-label">The Transaction</label>
-          <span id="is-art-tx">
+          <span id="is-art-tx" class="is-art-form-text">
             None
           </span>
         </div>
