--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
           <input class="is-art-btn" id="is-art-submit" type="submit" value="Change">
         </div>
         <div id="is-art-tx-group" class="is-art-form-group">
-          <label for="is-art-tx" class="is-art-label">Latest Transaction</label>
+          <label for="is-art-tx" class="is-art-label">
+            Latest Transaction
+            <span id="is-art-tx-confirmation" class="is-art-form-text">
+            </span>
+          </label>
           <span id="is-art-tx" class="is-art-form-text">
             None
           </span>
