--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <form id="is-art-form" action="" method="get">
         <div id="is-art-error">
         </div>
-        <div id="is-art-keyfile-group" class="is-art-form-group">
+        <fieldset id="is-art-keyfile-group" class="is-art-form-group">
           <label for="is-art-keyfile" class="is-art-label">An Arweave key file</label>
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
-        </div>
-        <div class="is-art-form-group">
-          <label for="is-art-submit" class="is-art-label">The contract's state</label>
+        </fieldset>
+        <fieldset class="is-art-form-group">
+          <label for="is-art-submit" class="is-art-label">The contract is or is not art</label>
           <input class="is-art-btn" id="is-art-submit" type="submit" value="Change">
-        </div>
-        <div id="is-art-tx-group" class="is-art-form-group">
+        </fieldset>
+        <fieldset id="is-art-tx-group" class="is-art-form-group">
           <label for="is-art-tx" class="is-art-label">
             Latest Transaction
             <span id="is-art-tx-confirmation" class="is-art-form-text">
@@ -37,7 +37,7 @@
           <span id="is-art-tx" class="is-art-form-text">
             None
           </span>
-        </div>
+        </fieldset>
       </form>
     </div>
   </div>
