--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p><em>Is Art</em> is a minimal, interactive artistic statement. A single transaction can toggle the work's self-definition as <em>art</em> or <em>not art</em>. All interactions with the contract are recorded permanently.</p>
         <p>Transacting with the work requires an <a href="https://faucet.arweave.net/">Arweave wallet</a> and a small fee.</p>
         <p>The <a href="https://github.com/christopheradams/is-art-weave">source code</a> is available for free under the MIT license. It includes a SmartWeave contract with tests, and a JavaScript application that reads from, queries, and writes to the Arweave network.</p>
-        <p>To use the application, select your Arweave key file, click the "Change" button, approve the transaction, and wait for it to be confirmed. The contract will refresh its state automatically.</p>
+        <p>To use the application, select your Arweave key file, click the "Change" button, approve the transaction, and wait for it to be confirmed. The page will refresh its state automatically.</p>
       </details>
       <form id="is-art-form" action="" method="get">
         <div id="is-art-error">
