--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="row">
       <details id="is-art-details">
         <summary>About</summary>
-        <p><em>Is Art</em> is a smart contract and distributed application on the <a href="https://www.arweave.org/">Arweave</a> network. It is an adaptation of <a href="https://rhea.art/">Rhea Myers</a>'s original work of the same name on the Ethereum network.</p>
+        <p>Christopher Adams, <em>Is Art</em>, 2021.</p>
+        <p><em>Is Art</em> is a smart contract and distributed application on the <a href="https://www.arweave.org/">Arweave</a> network. It is an adaptation of <a href="https://rhea.art/">Rhea Myers</a>'s original work of the same name for Ethereum.</p>
         <p><em>Is Art</em> is a minimal, interactive artistic statement. A single transaction can toggle the work's self-definition as <em>art</em> or <em>not art</em>. All interactions with the contract are recorded permanently.</p>
         <p>Interacting with the work requires an <a href="https://faucet.arweave.net/">Arweave wallet</a> to pay a transaction fee.</p>
         <p>The <a href="https://github.com/christopheradams/is-art-weave">source code</a> is available under a free license. It includes a SmartWeave contract with tests, and a JavaScript application that reads from, queries, and writes to the Arweave network.</p>
