--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p><em>Is Art</em> is a minimal, interactive artistic statement. A single transaction can toggle the work's self-definition as <em>art</em> or <em>not art</em>. All interactions with the contract are recorded permanently.</p>
         <p>Interacting with the work requires an <a href="https://faucet.arweave.net/">Arweave wallet</a> to pay a transaction fee.</p>
         <p>The <a href="https://github.com/christopheradams/is-art-weave">source code</a> is available under a free license. It includes a SmartWeave contract with tests, and a JavaScript application that reads from, queries, and writes to the Arweave network.</p>
-        <p>Select your Arweave key file, click the "Change" button, approve the transaction, and wait for it to be confirmed. The page will refresh its state automatically.</p>
+        <p>Select an Arweave key file, click the "Change" button, approve the transaction, and wait for it to be confirmed. The page will refresh its state automatically.</p>
         <p id="is-art-version"></p>
       </details>
       <form id="is-art-form" action="" method="get">
