--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <summary>About</summary>
         <p>Christopher Adams, <em>Is Art</em>, 2021. Custom software (JavaScript, HTML, CSS).</p>
         <p><em>Is Art</em> is a minimal, interactive artistic statement. Each interaction can change the work's self-definition as <em>art</em> or <em>not art</em>.</p>
-        <p><em>Is Art</em> is a smart contract and distributed application on the <a href="https://www.arweave.org/">Arweave</a> network. It is an adaptation of <a href="https://rhea.art/is-art">Rhea Myers</a>'s original work for Ethereum.</p>
+        <p><em>Is Art</em> is a smart contract and distributed application for the <a href="https://www.arweave.org/">Arweave</a> network. It is an adaptation of <a href="https://rhea.art/is-art">Rhea Myers</a>'s original work for Ethereum.</p>
         <p>Transacting with the work requires an <a href="https://faucet.arweave.net/">Arweave wallet</a> to pay a minimal fee.</p>
         <p>The <a href="https://github.com/christopheradams/is-art-weave">source code</a> is available under a free license. It includes a SmartWeave contract with tests, and a JavaScript application that reads from, queries, and writes to the Arweave network.</p>
         <p>Select an Arweave key file, click the "Change" button, approve the transaction, and wait for confirmation. The page will refresh its state automatically.</p>
