--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
       </div>
     </div>
     <div class="row">
-      <details id="is-art-details">
+      <details id="is-art-details" vocab="https://schema.org/" typeof="VisualArtwork">
         <summary>About</summary>
-        <p>Christopher Adams, <em>Is Art</em>, 2021. Custom software (JavaScript, HTML, CSS).</p>
-        <p><em>Is Art</em> is a minimal, interactive artistic statement. Each interaction can change the work's self-definition as <em>art</em> or <em>not art</em>.</p>
-        <p><em>Is Art</em> is a smart contract and distributed application for the <a href="https://www.arweave.org/">Arweave</a> network. It is an adaptation of <a href="https://rhea.art/is-art">Rhea Myers</a>'s original work for Ethereum.</p>
+        <p class="is-art-info">
+          <span class="is-art-artwork">
+            <span property="artist" typeof="Person">
+              <span property="name">Christopher Adams</span>,
+            </span>
+            <span class="is-art-title" property="name">Is Art</span>,
+            <span property="dateCreated">2021</span>.
+          </span>
+          <span property="artform">Custom software</span>
+          (<span property="artMedium">JavaScript, HTML, CSS</span>).
+        </p>
+        <p><span class="is-art-title">Is Art</span> is a minimal, interactive artistic statement. Each interaction can change the work's self-definition as <em>art</em> or <em>not art</em>.</p>
+        <p><span class="is-art-title">Is Art</span> is a smart contract and distributed application for the <a href="https://www.arweave.org/">Arweave</a> network. It is an adaptation of <a href="https://rhea.art/is-art">Rhea Myers</a>'s original work for Ethereum.</p>
         <p>Transacting with the work requires an <a href="https://faucet.arweave.net/">Arweave wallet</a> to pay a minimal fee.</p>
         <p>The <a href="https://github.com/christopheradams/is-art-weave">source code</a> is available under a free license.</p>
         <p>Select an Arweave key file, click the "Change" button, approve the transaction, and wait for confirmation. The page will update its state automatically.</p>
