--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
         <p id="is-art-version"></p>
       </details>
       <form id="is-art-form" action="" method="get">
-        <div id="is-art-error">
-        </div>
         <fieldset id="is-art-keyfile-group" class="is-art-form-group">
           <label for="is-art-keyfile" class="is-art-label">An Arweave key file</label>
           <input class="is-art-btn" id="is-art-keyfile" type="file" accept="application/json" required>
@@ -60,6 +58,7 @@
             None
           </span>
         </fieldset>
+        <div id="is-art-error"></div>
       </form>
     </div>
   </div>
