Show contract address in about

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         <p>Transacting with the work requires an <a href="https://faucet.arweave.net/">Arweave wallet</a> to pay a minimal fee.</p>
         <p>The <a href="https://github.com/christopheradams/is-art-weave">source code</a> is available under a free license.</p>
         <p>Select an Arweave key file, click the "Change" button, approve the transaction, and wait for confirmation. The page will update its state automatically.</p>
-        <p id="is-art-version"></p>
+        <p id="is-art-provenance">
+          <span id="is-art-version"></span>
+          <span id="is-art-contract-id"></span>
+        </p>
       </details>
       <form id="is-art-form" action="" method="get">
         <fieldset id="is-art-keyfile-group" class="is-art-form-group">
